Added code docs to forms, moved some form resets, search input now uses embedded SVG

--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -22,7 +22,7 @@
     // FORMS
     // ==================================================================
     // Sizes for various form elements, like fieldset row spacing.
-    // Applies to [role="row"]
+    // Applies to [sf-row]
     --sf-fieldset-row-spacing: 1.5rem;
 
     // OUTER UNIT MEASUREMENTS
