--- a/styleguide/scss/styles/_styles-reset.scss
+++ b/styleguide/scss/styles/_styles-reset.scss
@@ -1,5 +1,3 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-
 /* Document
    ========================================================================== */
 
@@ -308,6 +306,71 @@ textarea {
 ::-webkit-file-upload-button {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
+}
+
+/* Additional Form Resets
+   ========================================================================== */
+
+button,
+input,
+optgroup,
+select,
+textarea,
+option, a[role="button"] {
+
+  outline: none;
+}
+
+// Unstyle the caret on `<select>`s in IE10+
+select::-ms-expand {
+
+  background-color: transparent;
+  border: 0;
+}
+
+form {
+
+  margin: 0;
+}
+
+fieldset {
+
+  padding: 0;
+  margin: 0;
+  border: 0;
+
+  // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
+  // so we reset that to ensure it behaves more like a standard block element.
+  // See https://github.com/twbs/bootstrap/issues/12359.
+  min-width: 0;
+}
+
+legend {
+
+  display: block;
+  width: 100%;
+}
+
+// Better position radios and checkboxes.
+input[type="radio"],
+input[type="checkbox"] {
+
+  width: 1rem;
+  height: 1rem;
+}
+
+// Make range inputs behave like textual form controls.
+input[type="range"] {
+
+  display: inline-block;
+  min-width: 50%;
+}
+
+// Make multiple select elements height not fixed.
+select[multiple],
+select[size] {
+
+  height: auto;
 }
 
 /* Interactive
