Form field placeholder color tweak

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -197,7 +197,7 @@
     // Form field color assignments
     @include sf-generate-css-color-property(
         $name: "form-field-line",
-        $hex-color: #f3f3f3,
+        $hex-color: #e0e0e0,
         $hex-contrast-color: #000000,
         $hex-accent-color: #f3f3f3,
         $hex-color-dark: #353535,
@@ -221,7 +221,7 @@
         $name: "input",
         $hex-color: #f8f8f8,
         $hex-contrast-color: #000000,
-        $hex-accent-color: #f0f0f0,
+        $hex-accent-color: #ababab,
         $hex-color-dark: #353535,
         $hex-contrast-color-dark: #ffffff,
         $hex-accent-color-dark: #757575
