--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -341,7 +341,7 @@
 
                     path.foreground {
 
-                        fill: var(--sf-color-form-field-line) !important;
+                        fill: var(--sf-color-search-icon) !important;
                     }
                 }
             }
@@ -500,7 +500,7 @@
 
                 path.foreground {
 
-                    fill: var(--sf-color-form-field-line) !important;
+                    fill: var(--sf-color-select-caret) !important;
                 }
             }
             
