--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -170,7 +170,7 @@ body {
                         > div {
 
                             padding: 1.0008rem;
-                            color: white;
+                            color: var(--sf-color-white);
 
                             @include sf-media($from: tabp) {
 
@@ -190,7 +190,7 @@ body {
         
                             h3 {
                                 
-                                color: white;
+                                color: var(--sf-color-white);
                                 font-size: 1.5568rem;
                                 line-height: 1.5568rem;
 
