--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -114,7 +114,7 @@
             display: block;
             width: 100%;
             background-color: rgba(0, 0, 0, 0.05);
-            border: var(--sf-line-width) solid transparent;
+            border: var(--sf-line-width) solid var(--sf-color-clear);
             border-radius: 0.15rem;
             padding: 0.35rem 0.65rem;
             font-size: 0;
