Input wrapper top padding changes

--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -179,7 +179,7 @@
             background-color: var(--sf-color-input);
             border: var(--sf-line-width) solid var(--sf-color-form-field-line);
             border-radius: 0.15rem;
-            padding: 0.35rem 0.65rem;
+            padding: 0.4rem 0.65rem 0.25rem 0.65rem;
             font-size: 0;
         
             & > * {
@@ -478,8 +478,8 @@
   
         [sf-wrapper] {
 
-            padding-top: 0.35rem;
-            padding-bottom: 0.35rem;
+            padding-top: 0.4rem;
+            padding-bottom: 0.25rem;
             padding-left: 0.65rem;
             position: relative;
       
